# mmoserver

./: .autotools  .cproject  .gitattributes  .gitignore  .gitmodules  .project  BuildServer.bat  CMakeLists.txt  Local.testsettings  MMOServer.sln  Makefile.am  Makefile.in  README.markdown  TraceAndTestImpact.testsettings  aclocal.m4  bootstrap.sh  build_server.bat  build_server.sh  config.h.in  configure  configure.ac  mmoserver_vc10.sln  mmoserver_vc10.vsmdi  mmoserver_vc9.sln  mmoserver_vs10.sln  msvc_build.cmd
src/: CMakeLists.txt  Makefile.am  version.h  version.h.in
src/AdminServer/: AdminServer.cpp  AdminServer.h  AdminServer.vcproj  AdminServerOpcodes.h  CharacterAdminHandler.cpp  CharacterAdminHandler.h  Makefile.am  PlanetMapHandler.cpp  PlanetMapHandler.h
src/ChatServer/: CMakeLists.txt  CSRManager.cpp  CSRManager.h  CSRMessages.cpp  CSRObjects.h  CSROpcodes.h  Channel.cpp  Channel.h  CharacterAdminHandler.cpp  CharacterAdminHandler.cpp.orig  CharacterAdminHandler.h  ChatAvatarId.cpp  ChatAvatarId.h  ChatManager.cpp  ChatManager.cpp.orig  ChatManager.h  ChatMessageLib.cpp  ChatMessageLib.h  ChatMessages.cpp  ChatOpcodes.h  ChatServer.cpp  ChatServer.cpp.orig  ChatServer.h  ChatServer.vcproj  ChatServer.vcxproj  ChatServer.vcxproj.filters  GroupManager.cpp  GroupManager.h  GroupMessages.cpp  GroupObject.cpp  GroupObject.h  Mail.h  Makefile.am  PlanetMapHandler.cpp  PlanetMapHandler.h  Player.cpp  Player.h  StructureManagerChat.cpp  StructureManagerChat.cpp.orig  StructureManagerChat.h  (+6 more)
src/Common/: ApplicationService.cc  ApplicationService.cpp  ApplicationService.h  BuildInfo.cc  BuildInfo.cpp  BuildInfo.h  BuildInfoSrc.h  ByteBuffer-Inl.h  ByteBuffer.cpp  ByteBuffer.h  CMakeLists.txt  Common.vcproj  Common.vcxproj  Common.vcxproj.filters  CommonDeclspec.h  ConfigFile.cpp  ConfigFile.h  ConfigManager.cc  ConfigManager.cpp  ConfigManager.h  Crc.cc  Crc.cpp  Crc.h  DispatchClient.cpp  DispatchClient.h  Event.cc  Event.cpp  Event.h  EventDispatcher.cc  EventDispatcher.cpp  EventDispatcher.h  HashString.cc  HashString.cpp  HashString.h  IServer.h  LogManager.cpp  LogManager.h  Makefile.am  Message.h  MessageDispatch.cpp  (+25 more)
src/ConfigManager/: ConfigFile.cpp  ConfigFile.h  ConfigManager.cpp  ConfigManager.h  ConfigManager.vcproj  ConfigManager.vcxproj  ConfigManager.vcxproj.filters  Makefile.am
src/ConnectionServer/: CMakeLists.txt  CharacterAdminHandler.cpp  CharacterAdminHandler.h  ClientManager.cpp  ClientManager.cpp.orig  ClientManager.h  ConnectionClient.h  ConnectionDispatch.cpp  ConnectionDispatch.cpp.orig  ConnectionDispatch.h  ConnectionDispatchCallback.h  ConnectionDispatchClient.h  ConnectionServer.cpp  ConnectionServer.cpp.orig  ConnectionServer.h  ConnectionServer.vcproj  ConnectionServer.vcxproj  ConnectionServer.vcxproj.filters  ConnectionServerOpcodes.h  Makefile.am  MessageRouter.cpp  MessageRouter.h  PlanetMapHandler.cpp  PlanetMapHandler.h  ServerManager.cpp  ServerManager.cpp.orig  ServerManager.h
src/DatabaseManager/: CMakeLists.txt  DataBinding.h  DataBindingFactory.cpp  DataBindingFactory.h  Database.cpp  Database.h  DatabaseCallback.h  DatabaseConfig.h  DatabaseImplementation.h  DatabaseImplementationMySql.cpp  DatabaseImplementationMySql.h  DatabaseJob.h  DatabaseManager.cpp  DatabaseManager.h  DatabaseManager.vcproj  DatabaseManager.vcxproj  DatabaseManager.vcxproj.filters  DatabaseResult.cpp  DatabaseResult.h  DatabaseType.h  DatabaseWorkerThread.cpp  DatabaseWorkerThread.h  Makefile.am  Transaction.cpp  Transaction.h  declspec.h  makefile
src/LogManager/: Log.cpp  Log.h  LogEnums.h  LogManager.cpp  LogManager.h  LogManager.vcproj  LogManager.vcxproj  LogManager.vcxproj.filters  Makefile.am  Priority.h
src/LoginServer/: AccountData.h  CMakeLists.txt  LoginClient.h  LoginManager.cpp  LoginManager.cpp.orig  LoginManager.h  LoginServer.cpp  LoginServer.cpp.orig  LoginServer.h  LoginServer.vcproj  LoginServer.vcxproj  LoginServer.vcxproj.filters  LoginServerOpcodes.h  Makefile.am  Message.h  makefile
src/MathLib/: Circle.h  Makefile.am  Math.h  MathLib.vcproj  MathLib.vcxproj  MathLib.vcxproj.filters  Quaternion.cpp  Quaternion.h  Rectangle.h  Shape.h  Vector3.cpp  Vector3.h
src/MessageLib/: BuildingMessages.cpp  CMakeLists.txt  CommonMessages.cpp  CreatureMessages.cpp  FactoryCrateMessages.cpp  HarvesterMessages.cpp  IntangibleMessages.cpp  InternalMessages.cpp  Makefile.am  ManSchematicMessages.cpp  MessageLib.cpp  MessageLib.h  MessageLib.vcproj  MessageLib.vcxproj  MessageLib.vcxproj.filters  MissionMessages.cpp  ObjControllerMessages.cpp  PlayerMessages.cpp  ProsePackage.cpp  ProsePackage.h  ResourceContainerMessages.cpp  StaticMessages.cpp  StructureMessages.cpp  SystemMessages.cpp  TangibleMessages.cpp
src/NetworkManager/: CMakeLists.txt  CompCryptor.cpp  CompCryptor.h  DispatchClient.cpp  DispatchClient.h  GameService.cpp  GameService.h  IService.h  Makefile.am  Message.h  MessageDispatch.cpp  MessageDispatch.h  MessageFactory.cpp  MessageFactory.h  MessageOpcodes.h  NetConfig.cpp  NetConfig.h  NetworkCallback.h  NetworkClient.cpp  NetworkClient.h  NetworkConfig.h  NetworkManager.cpp  NetworkManager.h  NetworkManager.vcproj  NetworkManager.vcxproj  NetworkManager.vcxproj.filters  Packet.h  PacketFactory.cpp  PacketFactory.h  Service.cpp  Service.h  Session.cpp  Session.h  SessionFactory.cpp  SessionFactory.h  Socket.h  SocketReadThread.cpp  SocketReadThread.h  SocketWriteThread.cpp  SocketWriteThread.h  (+2 more)
src/PingServer/: ASynchPingSocket.cpp  ASynchPingSocket.h  CMakeLists.txt  Makefile.am  PingServer.cpp  PingServer.h  PingServer.vcproj  PingServer.vcxproj  PingServer.vcxproj.filters
src/PythonEngine/: CMakeLists.txt  engine.cc  engine.h  engine_unittest.cc  script_engine.cc  script_engine.h  script_engine_unittest.cc
src/ScriptEngine/: CMakeLists.txt  Makefile.am  Script.cpp  Script.h  ScriptEngine.cpp  ScriptEngine.h  ScriptEngine.vcproj  ScriptEngine.vcxproj  (+8 more)
tests/: Makefile.am  MockStateManager.h  TestByteBuffer.cpp  TestEvent.cpp  TestStateManager.cpp  Tests.vcproj  Tests.vcxproj  Tests.vcxproj.filters  main.cpp
(+2102 files in other folders)
